--- a/pom.xml
+++ b/pom.xml
@@ -84,8 +84,8 @@ THE POSSIBILITY OF SUCH DAMAGE.
                 <version>3.8.0</version>
                 <configuration>
                     <compilerVersion>${javac.target}</compilerVersion>
-                    <source>${javac.target}</source>
-                    <target>${javac.target}</target>
+                    <source>9</source>
+                    <target>9</target>
                 </configuration>
             </plugin>
 
